--- a/Tourbook.html
+++ b/Tourbook.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2025-2026 北歐極地跨國遠征戰略 粗花!</title>
+    <title>2025-2026 北歐極地跨國遠征戰略指揮中心</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -92,7 +92,7 @@
                 <!-- Right Side: Status & Mobile Toggle -->
                 <div class="flex items-center">
                    <div class="text-sm text-right hidden md:block mr-4">
-                       <div class="font-medium text-slate-900">極地戰略指揮部</div>
+                       <div class="font-medium text-slate-900">粗花嚕!</div>
                        <div class="text-slate-500 text-xs">狀態: 準備執行</div>
                    </div>
                    <!-- Mobile Menu Button -->
@@ -183,8 +183,9 @@
                         { time: "11:55", type: "transport", title: "空中北伐", desc: "Finnair AY0533 飛往羅瓦涅米 (RVN)。", details: "隨著緯度升高，地貌將從破碎湖區轉變為被白雪覆蓋的廣袤針葉林 (Taiga)。建議右側靠窗。", tips: "機上無免費餐食，建議自備。", link: "https://www.google.com/maps/search/?api=1&query=Rovaniemi+Airport" },
                         { time: "13:20", type: "transport", title: "資產接收", desc: "Green Motion 領取 VW Golf ICE。", details: "驗車 SOP (關鍵)：1. 確認引擎加熱線 (Heating Cable) 與雪鏟/刮冰器齊全。 2. 確認輪胎為釘胎 (Studded Tyres)。", tips: "再次確認 Avis 訂單已取消以免 No-Show 罰款。", link: "https://www.google.com/maps/search/?api=1&query=Rovaniemi+Airport" },
                         { time: "14:30", type: "activity", title: "聖誕老人村 & 午餐", desc: "跨越北緯 66°33′07″ 線，午餐吃烤鮭魚。", details: "直奔 Santa's Salmon Place (Kotahovi) 午餐，只賣現烤鮭魚 (€25)。隨後參觀聖誕老人辦公室。", tips: "下午時段人潮較少，天色漸暗燈飾亮起更有氣氛。", link: "https://www.google.com/maps/search/?api=1&query=Santa+Claus+Village" },
-                        { time: "16:00", type: "stay", title: "基地部署：Modern Log Apt", desc: "Rauhankatu 37 B。設定停車位加熱柱。", details: "學習使用停車位加熱柱 (Tolppa)，設定定時器在明早出發前 2 小時加熱引擎。", tips: "若氣溫低於 -15°C，引擎加熱是發動關鍵。", link: "https://www.google.com/maps/search/?api=1&query=Rauhankatu+37+B+Rovaniemi" },
-                        { time: "16:30", type: "food", title: "重裝補給：K-Citymarket", desc: "進入荒野前最後的大型補給點。", details: "採購：解凍噴霧 (De-icer)、抗凍雨刷水 (-20°C)、暖暖包、未來兩天的早餐食材。", tips: "", link: "https://www.google.com/maps/search/?api=1&query=K-Citymarket+Rovaniemi" },
+                        { time: "16:00", type: "activity", title: "麥當勞極光打卡", desc: "McDonald's Rovaniemi (前世界最北)。", details: "雖然「世界最北」頭銜已被俄羅斯與挪威奪走，但這裡仍保留傳統。向櫃檯索取免費的「極光明信片」作為紀念。", tips: "地址：Poromiehentie 3。", link: "https://www.google.com/maps/search/?api=1&query=McDonald's+Rovaniemi" },
+                        { time: "16:45", type: "stay", title: "基地部署：Modern Log Apt", desc: "Rauhankatu 37 B。設定停車位加熱柱。", details: "學習使用停車位加熱柱 (Tolppa)，設定定時器在明早出發前 2 小時加熱引擎。", tips: "若氣溫低於 -15°C，引擎加熱是發動關鍵。", link: "https://www.google.com/maps/search/?api=1&query=Rauhankatu+37+B+Rovaniemi" },
+                        { time: "17:15", type: "food", title: "重裝補給：K-Citymarket", desc: "進入荒野前最後的大型補給點。", details: "採購：解凍噴霧 (De-icer)、抗凍雨刷水 (-20°C)、暖暖包、未來兩天的早餐食材。", tips: "", link: "https://www.google.com/maps/search/?api=1&query=K-Citymarket+Rovaniemi" },
                         { time: "19:00", type: "food", title: "晚餐：Restaurant Nili", desc: "極致野味體驗，內部裝飾如獵人小屋。", details: "推薦：熊肉 (Bear Meat)。口感似牛肉但更粗纖維且帶甜味。", tips: "必須提前預訂。", link: "https://www.google.com/maps/search/?api=1&query=Restaurant+Nili" },
                         { time: "21:00", type: "aurora", title: "極光伏擊", desc: "Norvajärvi Public Beach。", details: "戰略優勢：避開 Ounasvaara 滑雪場光害。面向正北方，前方是廣闊冰封湖面。", tips: "保持引擎怠速運轉維持暖氣，注意排氣管勿被雪堵塞。", link: "https://www.google.com/maps/search/?api=1&query=Norvajärvi+Public+Beach" }
                     ]
@@ -196,6 +197,7 @@
                     events: [
                         { time: "09:00", type: "transport", title: "邊境推進", desc: "E75 南下前往瑞典邊境。注意「雪霧」。", details: "風險：與大型聯結車交會時，輪胎捲起的粉狀乾雪會形成白色霧牆，導致瞬間能見度為零。對策：握緊方向盤，保持直線。", tips: "10:00 在 Neste Tervola 休息 (檢查車輛)。", link: "https://www.google.com/maps/search/?api=1&query=E75+road+Finland" },
                         { time: "10:30 (FI)", type: "activity", title: "雙子城與時差紅利", desc: "抵達 Tornio (芬) / Haparanda (瑞)。", details: "跨過托爾尼奧河進入瑞典，手機時間會自動倒退 1 小時 (變回 09:30)。可參觀 Kemi Church 或 Haparanda Candy World。", tips: "注意時差：芬蘭 10:30 = 瑞典 09:30。", link: "https://www.google.com/maps/search/?api=1&query=Haparanda" },
+                        { time: "10:00 (SE)", type: "activity", title: "最北 IKEA 朝聖", desc: "IKEA HaparandaTornio。", details: "這是全世界最北的 IKEA。在瑞典國境內吃最道地的瑞典肉丸午餐，並購買一些極地居家用品（如羊毛毯）。", tips: "就在 HaparandaTornio 購物區。", link: "https://www.google.com/maps/search/?api=1&query=IKEA+Haparanda" },
                         { time: "11:50 (SE)", type: "transport", title: "港口集結", desc: "抵達 Axelsvik Marine (Båtskärsnäs)。", details: "工業港口，充滿起重機。務必在 12:30 (瑞典時間) 前完成報到。導航輸入準確座標，避免迷路。", tips: "", link: "https://www.google.com/maps/search/?api=1&query=Axelsvik+Marine" },
                         { time: "13:00 (SE)", type: "activity", title: "破冰行動：Polar Explorer", desc: "出航。龍蝦裝漂浮體驗。", details: "參觀引擎室，感受船身壓碎冰層。穿著橘色生存衣跳入冰海。注意：漂浮衣不透氣，建議內層只穿輕薄羊毛衣，勿穿羽絨外套。", tips: "船上有熱湯與麵包午餐。", link: "https://www.google.com/maps/search/?api=1&query=Polar+Explorer+Icebreaker" },
                         { time: "17:30 (FI)", type: "transport", title: "夜間返航", desc: "返回羅瓦涅米。天色全黑，警戒馴鹿。", details: "需特別留意路邊反光標示（可能代表有馴鹿）。善用遠光燈，遇對向來車務必切換近光燈。", tips: "", link: "" },
@@ -338,16 +340,35 @@
                 }
             ],
             restaurants: [
-                { name: "Ravintola Zetor", type: "特色體驗", location: "Helsinki", desc: "拖拉機主題，炒馴鹿肉。", tags: ["野味", "特色"], link: "https://www.google.com/maps/search/?api=1&query=Ravintola+Zetor" },
-                { name: "Fazer Café", type: "甜點", location: "Helsinki", desc: "國寶級巧克力，熱可可。", tags: ["甜點", "下午茶"], link: "https://www.google.com/maps/search/?api=1&query=Fazer+Café+Kluuvikatu" },
-                { name: "Santa's Salmon Place", type: "海鮮", location: "Rovaniemi", desc: "現烤鮭魚，傳統帳篷。", tags: ["海鮮", "午餐"], link: "https://www.google.com/maps/search/?api=1&query=Santa's+Salmon+Place" },
-                { name: "Restaurant Nili", type: "野味", location: "Rovaniemi", desc: "極致野味，熊肉料理。", tags: ["野味", "晚餐"], link: "https://www.google.com/maps/search/?api=1&query=Restaurant+Nili" },
-                { name: "Kaamasen Kievari", type: "小吃", location: "Kaamanen", desc: "馴鹿派與甜甜圈。", tags: ["小吃", "中途點"], link: "https://www.google.com/maps/search/?api=1&query=Kaamasen+Kievari" },
-                { name: "Snowhotel Kirkenes", type: "海鮮", location: "Kirkenes", desc: "帝王蟹吃到飽。", tags: ["海鮮", "大餐"], link: "https://www.google.com/maps/search/?api=1&query=Snowhotel+Kirkenes" },
-                { name: "Full Steam", type: "海鮮", location: "Tromsø", desc: "炸鱈魚舌，碼頭旁。", tags: ["海鮮", "特色"], link: "https://www.google.com/maps/search/?api=1&query=Full+Steam+Tromso" },
-                { name: "Lisa Elmqvist", type: "海鮮", location: "Stockholm", desc: "市場內的頂級鮮蝦吐司。", tags: ["海鮮", "午餐"], link: "https://www.google.com/maps/search/?api=1&query=Lisa+Elmqvist" },
-                { name: "Bakfickan", type: "瑞典料理", location: "Stockholm", desc: "皇家歌劇院旁，肉丸。", tags: ["肉丸", "經典"], link: "https://www.google.com/maps/search/?api=1&query=Bakfickan" },
-                { name: "Stockholms Gästabud", type: "瑞典料理", location: "Stockholm", desc: "老城區溫馨家常菜。", tags: ["肉丸", "老城"], link: "https://www.google.com/maps/search/?api=1&query=Stockholms+Gästabud" }
+                { name: "Ravintola Zetor", type: "特色體驗", location: "Helsinki", rating: 4.1, desc: "拖拉機主題，炒馴鹿肉。", tags: ["野味", "特色"], link: "https://www.google.com/maps/search/?api=1&query=Ravintola+Zetor" },
+                { name: "Fazer Café", type: "甜點", location: "Helsinki", rating: 4.3, desc: "國寶級巧克力，熱可可。", tags: ["甜點", "下午茶"], link: "https://www.google.com/maps/search/?api=1&query=Fazer+Café+Kluuvikatu" },
+                { name: "Restaurant Olo", type: "精緻餐飲", location: "Helsinki", rating: 4.6, desc: "米其林一星，現代北歐料理。", tags: ["特色", "晚餐"], link: "https://www.google.com/maps/search/?api=1&query=Restaurant+Olo+Helsinki" },
+                { name: "Löyly Helsinki", type: "特色體驗", location: "Helsinki", rating: 4.4, desc: "結合桑拿與餐廳，海景絕佳。", tags: ["特色", "景觀"], link: "https://www.google.com/maps/search/?api=1&query=Löyly+Helsinki" },
+                { name: "Cafe Ekberg", type: "甜點", location: "Helsinki", rating: 4.2, desc: "赫爾辛基最古老的咖啡館。", tags: ["甜點", "早午餐"], link: "https://www.google.com/maps/search/?api=1&query=Cafe+Ekberg+Helsinki" },
+                
+                { name: "Santa's Salmon Place", type: "海鮮", location: "Rovaniemi", rating: 4.6, desc: "現烤鮭魚，傳統帳篷。", tags: ["海鮮", "午餐"], link: "https://www.google.com/maps/search/?api=1&query=Santa's+Salmon+Place" },
+                { name: "Restaurant Nili", type: "野味", location: "Rovaniemi", rating: 4.4, desc: "極致野味，熊肉料理。", tags: ["野味", "晚餐"], link: "https://www.google.com/maps/search/?api=1&query=Restaurant+Nili" },
+                { name: "Gustav Kitchen & Bar", type: "特色體驗", location: "Rovaniemi", rating: 4.5, desc: "當地人氣小酒館，創意料理。", tags: ["特色", "晚餐"], link: "https://www.google.com/maps/search/?api=1&query=Gustav+Kitchen+&+Bar+Rovaniemi" },
+                { name: "Cafe & Bar 21", type: "甜點", location: "Rovaniemi", rating: 4.4, desc: "著名的鹹甜華夫餅。", tags: ["甜點", "輕食"], link: "https://www.google.com/maps/search/?api=1&query=Cafe+&+Bar+21+Rovaniemi" },
+
+                { name: "Kaamasen Kievari", type: "小吃", location: "Kaamanen", rating: 4.3, desc: "馴鹿派與甜甜圈。", tags: ["小吃", "中途點"], link: "https://www.google.com/maps/search/?api=1&query=Kaamasen+Kievari" },
+                { name: "Restaurant Aanaar", type: "精緻餐飲", location: "Kaamanen", rating: 4.6, desc: "Inari 湖畔的高級薩米料理。", tags: ["野味", "特色"], link: "https://www.google.com/maps/search/?api=1&query=Restaurant+Aanaar" },
+                { name: "Laanilan Kievari", type: "野味", location: "Kaamanen", rating: 4.3, desc: "Saariselkä 附近的傳統木屋餐廳。", tags: ["野味", "晚餐"], link: "https://www.google.com/maps/search/?api=1&query=Laanilan+Kievari" },
+
+                { name: "Snowhotel Kirkenes", type: "海鮮", location: "Kirkenes", rating: 4.5, desc: "帝王蟹吃到飽。", tags: ["海鮮", "大餐"], link: "https://www.google.com/maps/search/?api=1&query=Snowhotel+Kirkenes" },
+                { name: "Gapahuken Restaurant", type: "特色體驗", location: "Kirkenes", rating: 4.7, desc: "位於俄羅斯邊境，帝王蟹與景觀。", tags: ["海鮮", "景觀"], link: "https://www.google.com/maps/search/?api=1&query=Gapahuken+Restaurant+Kirkenes" },
+                { name: "Ritz", type: "小吃", location: "Kirkenes", rating: 4.2, desc: "當地受歡迎的比薩與義式料理。", tags: ["小吃", "午餐"], link: "https://www.google.com/maps/search/?api=1&query=Ritz+Kirkenes" },
+
+                { name: "Full Steam", type: "海鮮", location: "Tromsø", rating: 4.4, desc: "炸鱈魚舌，碼頭旁。", tags: ["海鮮", "特色"], link: "https://www.google.com/maps/search/?api=1&query=Full+Steam+Tromso" },
+                { name: "Bardus Bistro", type: "特色體驗", location: "Tromsø", rating: 4.6, desc: "結合北極食材與南歐風味。", tags: ["特色", "晚餐"], link: "https://www.google.com/maps/search/?api=1&query=Bardus+Bistro+Tromsø" },
+                { name: "Mathallen", type: "海鮮", location: "Tromsø", rating: 4.5, desc: "當地頂級食材市場餐廳。", tags: ["海鮮", "精緻餐飲"], link: "https://www.google.com/maps/search/?api=1&query=Mathallen+Tromsø" },
+
+                { name: "Lisa Elmqvist", type: "海鮮", location: "Stockholm", rating: 4.3, desc: "市場內的頂級鮮蝦吐司。", tags: ["海鮮", "午餐"], link: "https://www.google.com/maps/search/?api=1&query=Lisa+Elmqvist" },
+                { name: "Bakfickan", type: "瑞典料理", location: "Stockholm", rating: 4.4, desc: "皇家歌劇院旁，肉丸。", tags: ["肉丸", "經典"], link: "https://www.google.com/maps/search/?api=1&query=Bakfickan" },
+                { name: "Stockholms Gästabud", type: "瑞典料理", location: "Stockholm", rating: 4.5, desc: "老城區溫馨家常菜。", tags: ["肉丸", "老城"], link: "https://www.google.com/maps/search/?api=1&query=Stockholms+Gästabud" },
+                { name: "Meatballs for the People", type: "瑞典料理", location: "Stockholm", rating: 4.2, desc: "各式各樣的肉丸專賣店。", tags: ["肉丸", "特色"], link: "https://www.google.com/maps/search/?api=1&query=Meatballs+for+the+People" },
+                { name: "Vete-Katten", type: "甜點", location: "Stockholm", rating: 4.3, desc: "經典瑞典 Fika 體驗。", tags: ["甜點", "下午茶"], link: "https://www.google.com/maps/search/?api=1&query=Vete-Katten+Stockholm" },
+                { name: "Fem Små Hus", type: "特色體驗", location: "Stockholm", rating: 4.4, desc: "老城區地下室歷史餐廳。", tags: ["野味", "老城"], link: "https://www.google.com/maps/search/?api=1&query=Fem+Små+Hus" }
             ]
         };
 
@@ -745,6 +766,10 @@
                             <h3 class="text-lg font-bold text-slate-900 mb-4 flex items-center"><i class="fa-solid fa-plane text-blue-500 mr-2"></i> 關鍵航班</h3>
                             <ul class="space-y-4 text-sm">
                                 <li class="flex justify-between border-b pb-2">
+                                    <span>Day 1: TPE -> AMS -> HEL</span>
+                                    <span class="font-mono font-bold">KL0808 / KL1251</span>
+                                </li>
+                                <li class="flex justify-between border-b pb-2">
                                     <span>Day 2: HEL -> RVN</span>
                                     <span class="font-mono font-bold">AY0533</span>
                                 </li>
@@ -842,6 +867,10 @@
                             <span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-slate-100 text-slate-800">
                                 ${r.type}
                             </span>
+                        </div>
+                        <div class="flex items-center mt-1 mb-2">
+                            <i class="fa-solid fa-star text-yellow-400 text-xs mr-1"></i>
+                            <span class="text-sm font-bold text-slate-700">${r.rating}</span>
                         </div>
                         <p class="text-xs text-slate-500 mb-2"><i class="fa-solid fa-location-dot mr-1"></i> ${r.location}</p>
                         <p class="text-sm text-slate-600 mt-2">${r.desc}</p>
