--- a/Tourbook.html
+++ b/Tourbook.html
@@ -92,7 +92,7 @@
                 <!-- Right Side: Status & Mobile Toggle -->
                 <div class="flex items-center">
                    <div class="text-sm text-right hidden md:block mr-4">
-                       <div class="font-medium text-slate-900">粗花嚕!</div>
+                       <div class="font-medium text-slate-900">極地戰略指揮部</div>
                        <div class="text-slate-500 text-xs">狀態: 準備執行</div>
                    </div>
                    <!-- Mobile Menu Button -->
@@ -809,6 +809,43 @@
                                     <div class="font-semibold text-slate-900">Phase 3: 峽灣 EV</div>
                                     <div class="text-sm text-slate-600">Sixt (BGO) - Audi e-tron</div>
                                     <div class="text-xs text-orange-500 mt-1 font-bold">Day 9 Eidfjord 必充。</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Apps & Cards Section (NEW) -->
+                        <div class="bg-white rounded-lg shadow p-6 md:col-span-2">
+                            <h3 class="text-lg font-bold text-slate-900 mb-4 flex items-center"><i class="fa-solid fa-mobile-screen-button text-purple-500 mr-2"></i> 戰術應用程式與支付 (Apps & Cards)</h3>
+                            <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+                                <!-- Finland -->
+                                <div class="p-3 bg-blue-50 rounded border border-blue-100">
+                                    <div class="font-bold text-blue-800 mb-2 border-b border-blue-200 pb-1">🇫🇮 芬蘭 (Finland)</div>
+                                    <ul class="text-sm text-slate-700 space-y-1">
+                                        <li><span class="font-semibold">停車:</span> EasyPark, ParkMan</li>
+                                        <li><span class="font-semibold">交通:</span> HSL (赫爾辛基公車/地鐵)</li>
+                                        <li><span class="font-semibold">充電/加油:</span> ABC-mobiili, K-Lataus</li>
+                                        <li><span class="font-semibold">鐵路:</span> VR Mobile</li>
+                                    </ul>
+                                </div>
+                                <!-- Sweden -->
+                                <div class="p-3 bg-yellow-50 rounded border border-yellow-100">
+                                    <div class="font-bold text-yellow-800 mb-2 border-b border-yellow-200 pb-1">🇸🇪 瑞典 (Sweden)</div>
+                                    <ul class="text-sm text-slate-700 space-y-1">
+                                        <li><span class="font-semibold">停車:</span> EasyPark, Betala P (斯德哥爾摩)</li>
+                                        <li><span class="font-semibold">交通:</span> SL (斯德哥爾摩大眾運輸)</li>
+                                        <li><span class="font-semibold">充電:</span> InCharge, Mer Connect</li>
+                                        <li><span class="font-semibold">支付:</span> 信用卡感應為主 (幾乎無現金)</li>
+                                    </ul>
+                                </div>
+                                <!-- Norway -->
+                                <div class="p-3 bg-red-50 rounded border border-red-100">
+                                    <div class="font-bold text-red-800 mb-2 border-b border-red-200 pb-1">🇳🇴 挪威 (Norway)</div>
+                                    <ul class="text-sm text-slate-700 space-y-1">
+                                        <li><span class="font-semibold">EV 充電:</span> <span class="text-red-600 font-bold">Elton</span> (整合App, 必載), Mer</li>
+                                        <li><span class="font-semibold">停車:</span> EasyPark, Bil i Oslo</li>
+                                        <li><span class="font-semibold">交通:</span> Skyss (卑爾根/Voss), Vy</li>
+                                        <li><span class="font-semibold">過路費:</span> Epass24 / FerryPay (備用)</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
