--- a/Tourbook.html
+++ b/Tourbook.html
@@ -194,7 +194,7 @@
                    </button>
 
                    <div class="text-sm text-right hidden md:block mr-2">
-                       <div class="font-medium text-slate-900 dark:text-white">極地戰略指揮部</div>
+                       <div class="font-medium text-slate-900 dark:text-white">出花嚕~>出花嚕>>
                        <div class="text-slate-500 dark:text-slate-400 text-xs">狀態: 準備執行</div>
                    </div>
                    <!-- Mobile Menu Button -->
