--- a/Tourbook.html
+++ b/Tourbook.html
@@ -187,20 +187,20 @@
                 </div>
 
                 <!-- Right Side: Status & Mobile Toggle -->
-                <div class="flex items-center gap-3">
+                <div class="flex items-center gap-3 flex-none">
                    <!-- Dark Mode Toggle -->
                    <button onclick="toggleDarkMode()" class="p-2 rounded-full text-slate-500 hover:bg-slate-100 dark:text-yellow-400 dark:hover:bg-slate-800 transition-colors" title="Toggle Aurora Mode">
                         <i id="dark-mode-icon" class="fa-solid fa-moon text-xl"></i>
                    </button>
 
                    <div class="text-sm text-right hidden md:block mr-2">
-                       <div class="font-medium text-slate-900 dark:text-white">出花嚕~>出花嚕>>
+                       <div class="font-medium text-slate-900 dark:text-white">極地戰略指揮部</div>
                        <div class="text-slate-500 dark:text-slate-400 text-xs">狀態: 準備執行</div>
                    </div>
                    <!-- Mobile Menu Button -->
-                   <button id="mobile-menu-btn" onclick="toggleMobileMenu()" class="md:hidden inline-flex items-center justify-center p-2 rounded-md text-slate-400 hover:text-slate-500 hover:bg-slate-100 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                   <button id="mobile-menu-btn" onclick="toggleMobileMenu()" class="md:hidden inline-flex items-center justify-center p-2 rounded-md text-slate-700 hover:text-slate-900 hover:bg-slate-100 dark:text-slate-200 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
                         <span class="sr-only">Open main menu</span>
-                        <i class="fa-solid fa-bars text-xl"></i>
+                        <i class="fa-solid fa-bars text-2xl"></i>
                    </button>
                 </div>
             </div>
